// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayResponseNormalizer normalizes queries with "filters" 1`] = `
Object {
  "4": Object {
    "__id": "4",
    "__typename": "User",
    "friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])": Object {
      "__ref": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])",
    },
    "id": "4",
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])",
    "__typename": "FriendsConnection",
    "edges": Object {
      "__refs": Array [
        "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):edges:0",
      ],
    },
    "pageInfo": Object {
      "__ref": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):pageInfo",
    },
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):edges:0": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):edges:0",
    "__typename": "FriendsEdge",
    "cursor": "cursor:bestFriends",
    "node": Object {
      "__ref": "pet",
    },
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):pageInfo": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):pageInfo",
    "__typename": "PageInfo",
    "endCursor": "cursor-1",
    "hasNextPage": false,
  },
  "client:root": Object {
    "__id": "client:root",
    "__typename": "__Root",
    "node(id:\\"1\\")": Object {
      "__ref": "4",
    },
  },
  "pet": Object {
    "__id": "pet",
    "__typename": "User",
    "id": "pet",
  },
}
`;

exports[`RelayResponseNormalizer normalizes queries with "filters" 2`] = `
Object {
  "4": Object {
    "__id": "4",
    "__typename": "User",
    "friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"])": Object {
      "__ref": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"])",
    },
    "friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])": Object {
      "__ref": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])",
    },
    "id": "4",
  },
  "cat": Object {
    "__id": "cat",
    "__typename": "User",
    "id": "cat",
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"])": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"])",
    "__typename": "FriendsConnection",
    "edges": Object {
      "__refs": Array [
        "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"]):edges:0",
      ],
    },
    "pageInfo": Object {
      "__ref": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"]):pageInfo",
    },
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"]):edges:0": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"]):edges:0",
    "__typename": "FriendsEdge",
    "cursor": "cursor:bestFriends:2",
    "node": Object {
      "__ref": "cat",
    },
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"]):pageInfo": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"first name\\"]):pageInfo",
    "__typename": "PageInfo",
    "endCursor": "cursor-2",
    "hasNextPage": false,
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"])",
    "__typename": "FriendsConnection",
    "edges": Object {
      "__refs": Array [
        "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):edges:0",
      ],
    },
    "pageInfo": Object {
      "__ref": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):pageInfo",
    },
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):edges:0": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):edges:0",
    "__typename": "FriendsEdge",
    "cursor": "cursor:bestFriends",
    "node": Object {
      "__ref": "pet",
    },
  },
  "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):pageInfo": Object {
    "__id": "client:4:friends(first:1,isViewerFriend:true,orderby:[\\"last name\\"]):pageInfo",
    "__typename": "PageInfo",
    "endCursor": "cursor-1",
    "hasNextPage": false,
  },
  "client:root": Object {
    "__id": "client:root",
    "__typename": "__Root",
    "node(id:\\"1\\")": Object {
      "__ref": "4",
    },
  },
  "pet": Object {
    "__id": "pet",
    "__typename": "User",
    "id": "pet",
  },
}
`;

exports[`RelayResponseNormalizer normalizes queries with "handle" fields 1`] = `
Object {
  "4": Object {
    "__id": "4",
    "__typename": "User",
    "friends(first:1)": Object {
      "__ref": "client:4:friends(first:1)",
    },
    "id": "4",
  },
  "client:4:friends(first:1)": Object {
    "__id": "client:4:friends(first:1)",
    "__typename": "FriendsConnection",
    "edges": Object {
      "__refs": Array [
        "client:4:friends(first:1):edges:0",
      ],
    },
  },
  "client:4:friends(first:1):edges:0": Object {
    "__id": "client:4:friends(first:1):edges:0",
    "__typename": "FriendsEdge",
    "cursor": "cursor:bestFriends",
    "node": Object {
      "__ref": "pet",
    },
  },
  "client:root": Object {
    "__id": "client:root",
    "__typename": "__Root",
    "node(id:\\"1\\")": Object {
      "__ref": "4",
    },
  },
  "pet": Object {
    "__id": "pet",
    "__typename": "User",
    "id": "pet",
    "name": "Beast",
  },
}
`;
